Bug 1359668 - update mSettings.mWidth and mSettings.mHeight when there is a frame size change. r=jib

MozReview-Commit-ID: GGagmRai3YP